update "about", "new pub" and "Fix for diff2html line number overflow"

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -610,6 +610,11 @@ footer.sticky-bottom {
   }
 }
 
+// diff2html - Fix for diff2html line number overflow
+.d2h-diff-table {
+  position: relative;
+}
+
 // Distill
 
 .distill {
